--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: #add8e6;
-  
+
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -16,7 +16,7 @@ body{
     font-size: 20px;
     font-weight: 400;
     color: black;
-    
+
 }
 .title h1{
     font-size: 100px;
@@ -24,34 +24,31 @@ body{
 
 
 }
-.form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%; /* Full width */
-}
-
-button[type="submit"] {
+button {
     background-color: #007bff;
     color: white;
-    padding: 15px 30px; /* Increase size */
-    font-size: 18px; /* Increase font size */
     border: none;
+    padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-top: 20px; /* Space above the button */
-}
 
-button[type="submit"]:hover {
+}
+button:hover{
     background-color: #0056b3;
 }
-
-#error-message {
-    color: red;
-    margin-bottom: 10px; /* Space below the error message */
-    text-align: center;
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+    border-radius: 5px;
 }
 /* From Uiverse.io by Zameerahmad01 */ 
 ul {
@@ -73,27 +70,24 @@ ul {
     position: relative;
   }
   .example-2 .icon-content .tooltip {
+   
     position: absolute;
-    bottom: 100%; /* Places the tooltip above the button */
-    left: 50%; /* Center the tooltip horizontally */
-    transform: translateX(-50%); /* Center the tooltip */
+    bottom: 100%; 
+    
+    transform: translateX(50%);
     color: #fff;
     padding: 6px 10px;
     border-radius: 5px;
     opacity: 0;
     visibility: hidden;
     font-size: 14px;
-    background-color: rgba(0, 0, 0, 0.7); /* Background for better visibility */
     transition: all 0.3s ease;
-    z-index: 1; /* Ensure the tooltip appears above other elements */
-    white-space: nowrap; /* Prevent text from wrapping */
-}
-
-.example-2 .icon-content:hover .tooltip {
+  }
+  .example-2 .icon-content:hover .tooltip {
     opacity: 1;
     visibility: visible;
-    bottom: 120%; /* Adjust this value to ensure the tooltip is fully above the button */
-}
+    top: 5px;
+  }
   .example-2 .icon-content a {
     position: relative;
     overflow: hidden;
@@ -133,7 +127,6 @@ ul {
     height: 100%;
   }
   
-
   
   .example-2 .icon-content a[data-social="github"] .filled,
   .example-2 .icon-content a[data-social="github"] ~ .tooltip {
@@ -151,5 +144,3 @@ ul {
       #fd1f1f
     );
   }
-
-  
