--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,8 @@ body{
     gap: 20px;
 }
 .result{
+  display: flex;
+  flex-direction: column;
     text-align: center;
     font-size: 20px;
     font-weight: 400;
