fixing the button redirection

--- a/templates/home_fr.html
+++ b/templates/home_fr.html
@@ -113,7 +113,7 @@
       console.log(selectedLang)
       if (selectedLang) {
         // Redirect to the corresponding language route
-        window.location.href = `/${selectedLang}/`;
+        window.location.href = `/${selectedLang}`;
       }
     });
   });
